--- a/index.html
+++ b/index.html
@@ -11,31 +11,52 @@
 
     <nav class="navbar">
         <div class="logo">Help<span>TDL</span></div>
-        <div class="nav-links">
-            <button class="btn-tutor" onclick="toggleModal('login-modal')">Área do Tutor 🔒</button>
-        </div>
     </nav>
 
-    <section class="selection-overlay" id="selection-screen">
+    <section class="selection-overlay" id="selection-screen" style="display: none;">
         <div class="selection-box">
             <div class="badge">Acesso Institucional</div>
             <h2>Olá! Selecione sua Unidade</h2>
             <p>Escolha a escola para carregar o painel personalizado.</p>
             
             <div class="selectors">
-                <select id="select-estado">
+                <select id="select-estado" onchange="carregarCidades()">
+                    <option value="">Selecione o Estado...</option>
+                    <option value="AC">Acre</option>
+                    <option value="AL">Alagoas</option>
+                    <option value="AP">Amapá</option>
+                    <option value="AM">Amazonas</option>
+                    <option value="BA">Bahia</option>
+                    <option value="CE">Ceará</option>
+                    <option value="DF">Distrito Federal</option>
+                    <option value="ES">Espírito Santo</option>
+                    <option value="GO">Goiás</option>
+                    <option value="MA">Maranhão</option>
+                    <option value="MT">Mato Grosso</option>
+                    <option value="MS">Mato Grosso do Sul</option>
+                    <option value="MG">Minas Gerais</option>
+                    <option value="PA">Pará</option>
+                    <option value="PB">Paraíba</option>
                     <option value="PR">Paraná</option>
+                    <option value="PE">Pernambuco</option>
+                    <option value="PI">Piauí</option>
+                    <option value="RJ">Rio de Janeiro</option>
+                    <option value="RN">Rio Grande do Norte</option>
+                    <option value="RS">Rio Grande do Sul</option>
+                    <option value="RO">Rondônia</option>
+                    <option value="RR">Roraima</option>
+                    <option value="SC">Santa Catarina</option>
+                    <option value="SP">São Paulo</option>
+                    <option value="SE">Sergipe</option>
+                    <option value="TO">Tocantins</option>
                 </select>
 
-                <select id="select-cidade">
-                    <option value="paranagua">Paranaguá</option>
+                <select id="select-cidade" onchange="carregarEscolas()">
+                    <option value="">Selecione a Cidade...</option>
                 </select>
 
                 <select id="select-escola">
                     <option value="">Selecione a Escola...</option>
-                    <option value="1">Escola Municipal Escola 1</option>
-                    <option value="2">Escola Municipal Escola 2</option>
-                    <option value="3">Escola Municipal Escola 3</option>
                 </select>
 
                 <button class="btn-main" onclick="entrarNaEscola()">Acessar Painel da Escola</button>
@@ -46,7 +67,7 @@
     <section class="app-section" id="app-content" style="display: none;">
         <div class="app-header-info">
             <span id="escola-tag"></span>
-            <button class="btn-exit" onclick="window.location.reload()">Trocar Unidade</button>
+            <button class="btn-exit" onclick="window.location.reload()">Sair / Trocar Unidade</button>
         </div>
         
         <div class="app-title">
@@ -65,15 +86,14 @@
         <p class="hashtags">#ajudatdl</p>
     </footer>
 
-    <div id="login-modal" class="modal">
+    <div id="login-modal" class="modal" style="display: flex;">
         <div class="modal-content">
-            <span class="close" onclick="toggleModal('login-modal')">&times;</span>
-            <h3>Acesso do Tutor</h3>
-            <p>Gerencie os ícones e frases da sua turma.</p>
+            <h3>Acesso Restrito</h3>
+            <p>Identifique-se para aceder ao sistema.</p>
             <form id="login-form">
-                <input type="text" id="login-cpf" placeholder="CPF (123.123.123-12)" required>
-                <input type="password" id="login-senha" placeholder="Senha (23)" required>
-                <button type="submit" class="btn-login">Entrar no Perfil</button>
+                <input type="text" id="login-cpf" placeholder="CPF (000.000.000-00)" required>
+                <input type="password" id="login-senha" placeholder="Senha" required>
+                <button type="submit" class="btn-main">Entrar</button>
             </form>
         </div>
     </div>
