--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <section class="app-section" id="app-content" style="display: none;">
         <div class="app-header-info">
             <span id="escola-tag"></span>
-            <button class="btn-exit" onclick="window.location.reload()">Sair / Trocar Unidade</button>
+            <button class="btn-exit" onclick="window.location.reload()">Trocar Unidade</button>
         </div>
         
         <div class="app-title">
@@ -89,11 +89,11 @@
     <div id="login-modal" class="modal" style="display: flex;">
         <div class="modal-content">
             <h3>Acesso Restrito</h3>
-            <p>Identifique-se para aceder ao sistema.</p>
+            <p>Identifique-se para acessar o sistema.</p>
             <form id="login-form">
-                <input type="text" id="login-cpf" placeholder="CPF (000.000.000-00)" required>
+                <input type="text" id="login-cpf" placeholder="CPF (Apenas números)" required>
                 <input type="password" id="login-senha" placeholder="Senha" required>
-                <button type="submit" class="btn-main">Entrar</button>
+                <button type="submit" class="btn-login">Entrar</button>
             </form>
         </div>
     </div>
