--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Help TDL | Plataforma de Comunicação Assistiva</title>
+    <title>Help TDL | Simulação Administrador</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
 </head>
@@ -16,9 +16,7 @@
     <section class="selection-overlay" id="selection-screen" style="display: none;">
         <div class="selection-box">
             <div class="badge">Acesso Institucional</div>
-            <h2>Olá! Selecione sua Unidade</h2>
-            <p>Escolha a escola para carregar o painel personalizado.</p>
-            
+            <h2>Selecione a Unidade</h2>
             <div class="selectors">
                 <select id="select-estado" onchange="carregarCidades()">
                     <option value="">Selecione o Estado...</option>
@@ -59,7 +57,7 @@
                     <option value="">Selecione a Escola...</option>
                 </select>
 
-                <button class="btn-main" onclick="entrarNaEscola()">Acessar Painel da Escola</button>
+                <button class="btn-main" onclick="entrarNaEscola()">Acessar Painel</button>
             </div>
         </div>
     </section>
@@ -67,33 +65,28 @@
     <section class="app-section" id="app-content" style="display: none;">
         <div class="app-header-info">
             <span id="escola-tag"></span>
-            <button class="btn-exit" onclick="window.location.reload()">Trocar Unidade</button>
+            <div>
+                <button id="btn-admin-add" class="btn-main" style="padding: 5px 15px; font-size: 0.7rem; display: none;" onclick="adicionarCard()">+ Novo Card</button>
+                <button class="btn-exit" onclick="window.location.reload()">Sair</button>
+            </div>
         </div>
         
         <div class="app-title">
-            <h2>Comunicação Alternativa</h2>
-            <p>Toque no card para ouvir a voz personalizada do tutor</p>
+            <h2 id="titulo-boas-vindas">Comunicação Alternativa</h2>
+            <p id="subtitulo-admin">Clique no card para ouvir.</p>
         </div>
 
         <main id="icons-container"></main>
     </section>
 
-    <footer class="main-footer">
-        <div class="footer-content">
-            <p><strong>Help TDL</strong> - Tecnologia Assistiva</p>
-            <p>Contato: mteclitoral@gmail.com</p>
-        </div>
-        <p class="hashtags">#ajudatdl</p>
-    </footer>
-
     <div id="login-modal" class="modal" style="display: flex;">
         <div class="modal-content">
-            <h3>Acesso Restrito</h3>
-            <p>Identifique-se para acessar o sistema.</p>
+            <h3>Login do Tutor</h3>
+            <p>Simulação: Introduza qualquer dado para entrar.</p>
             <form id="login-form">
-                <input type="text" id="login-cpf" placeholder="CPF (Apenas números)" required>
-                <input type="password" id="login-senha" placeholder="Senha" required>
-                <button type="submit" class="btn-login">Entrar</button>
+                <input type="text" id="login-cpf" placeholder="CPF" value="07356531941">
+                <input type="password" id="login-senha" placeholder="Senha" value="help123">
+                <button type="submit" class="btn-main">Entrar no Sistema</button>
             </form>
         </div>
     </div>
