--- a/index.html
+++ b/index.html
@@ -19,22 +19,14 @@
             <h2>Configurar Unidade</h2>
             <div class="selectors">
                 <select id="select-estado" onchange="carregarCidades()">
-                    <option value="">Selecione o Estado...</option>
-                    <option value="AC">Acre</option> <option value="AL">Alagoas</option> <option value="AP">Amapá</option>
-                    <option value="AM">Amazonas</option> <option value="BA">Bahia</option> <option value="CE">Ceará</option>
-                    <option value="DF">Distrito Federal</option> <option value="ES">Espírito Santo</option> <option value="GO">Goiás</option>
-                    <option value="MA">Maranhão</option> <option value="MT">Mato Grosso</option> <option value="MS">Mato Grosso do Sul</option>
-                    <option value="MG">Minas Gerais</option> <option value="PA">Pará</option> <option value="PB">Paraíba</option>
-                    <option value="PR">Paraná</option> <option value="PE">Pernambuco</option> <option value="PI">Piauí</option>
-                    <option value="RJ">Rio de Janeiro</option> <option value="RN">Rio Grande do Norte</option> <option value="RS">Rio Grande do Sul</option>
-                    <option value="RO">Rondônia</option> <option value="RR">Roraima</option> <option value="SC">Santa Catarina</option>
-                    <option value="SP">São Paulo</option> <option value="SE">Sergipe</option> <option value="TO">Tocantins</option>
+                    <option value="">Estado...</option>
+                    <option value="PR">Paraná</option>
                 </select>
                 <select id="select-cidade" onchange="carregarEscolas()">
-                    <option value="">Selecione a Cidade...</option>
+                    <option value="">Cidade...</option>
                 </select>
                 <select id="select-escola">
-                    <option value="">Selecione a Unidade Escola/CMEI...</option>
+                    <option value="">Unidade Escola/CMEI...</option>
                 </select>
                 <button class="btn-main" onclick="entrarNaEscola()">Acessar Painel</button>
             </div>
@@ -52,7 +44,7 @@
 
         <div class="avatar-container">
             <div id="avatar-display" class="avatar-emoji">🙋‍♂️</div>
-            <div id="balao-texto" class="speech-bubble">Olá! Vamos conversar?</div>
+            <div id="balao-texto" class="speech-bubble">Olá! Toque em um botão.</div>
         </div>
 
         <main id="icons-container"></main>
@@ -61,25 +53,42 @@
     <div id="login-modal" class="modal" style="display: flex;">
         <div class="modal-content">
             <h3>Login do Tutor</h3>
-            <p>Simulação: Digite qualquer dado para entrar.</p>
             <form id="login-form">
                 <input type="text" id="login-cpf" placeholder="CPF" value="07356531941">
                 <input type="password" id="login-senha" placeholder="Senha" value="help123">
-                <button type="submit" class="btn-main">Entrar no Sistema</button>
+                <button type="submit" class="btn-main">Entrar</button>
             </form>
         </div>
     </div>
 
     <div id="custom-modal" class="modal">
-        <div class="modal-content">
-            <h3>Criar Comando Personalizado</h3>
-            <p>Escolha o ícone do botão:</p>
-            <div id="biblioteca-emojis" class="emoji-grid"></div>
+        <div class="modal-content" style="max-width: 500px;">
+            <h3>Personalizar Botão</h3>
+            
+            <div class="tabs">
+                <button onclick="mudarAba('emoji')">Emojis</button>
+                <button onclick="mudarAba('internet')">Buscar Foto</button>
+            </div>
+
+            <div id="aba-emoji" class="aba-content">
+                <div id="biblioteca-emojis" class="emoji-grid"></div>
+            </div>
+
+            <div id="aba-internet" class="aba-content" style="display:none;">
+                <div class="search-box-img">
+                    <input type="text" id="img-search-query" placeholder="Ex: Maçã, Cachorro...">
+                    <button type="button" onclick="buscarImagensReais()">🔍</button>
+                </div>
+                <div id="resultado-busca-img" class="emoji-grid"></div>
+            </div>
+
             <input type="hidden" id="custom-icon">
+            <input type="hidden" id="is-image-type" value="false">
             <input type="text" id="custom-text" placeholder="Nome do Botão">
-            <input type="text" id="custom-speak" placeholder="Frase que o bonequinho vai falar">
+            <input type="text" id="custom-speak" placeholder="O que será falado?">
+            
             <button class="btn-main" onclick="salvarNovoCard()">Criar Botão</button>
-            <button onclick="fecharModal()" class="btn-exit" style="width:100%; margin-top:10px;">Cancelar</button>
+            <button onclick="fecharModal()" class="btn-exit" style="width:100%; margin-top:5px;">Cancelar</button>
         </div>
     </div>
 
