--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Help TDL | Painel Completo</title>
+    <title>Help TDL | Painel Ultra Completo</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
 </head>
@@ -19,14 +19,22 @@
             <h2>Configurar Unidade</h2>
             <div class="selectors">
                 <select id="select-estado" onchange="carregarCidades()">
-                    <option value="">Estado...</option>
-                    <option value="PR">Paraná</option>
+                    <option value="">Selecione o Estado...</option>
+                    <option value="AC">Acre</option> <option value="AL">Alagoas</option> <option value="AP">Amapá</option>
+                    <option value="AM">Amazonas</option> <option value="BA">Bahia</option> <option value="CE">Ceará</option>
+                    <option value="DF">Distrito Federal</option> <option value="ES">Espírito Santo</option> <option value="GO">Goiás</option>
+                    <option value="MA">Maranhão</option> <option value="MT">Mato Grosso</option> <option value="MS">Mato Grosso do Sul</option>
+                    <option value="MG">Minas Gerais</option> <option value="PA">Pará</option> <option value="PB">Paraíba</option>
+                    <option value="PR">Paraná</option> <option value="PE">Pernambuco</option> <option value="PI">Piauí</option>
+                    <option value="RJ">Rio de Janeiro</option> <option value="RN">Rio Grande do Norte</option> <option value="RS">Rio Grande do Sul</option>
+                    <option value="RO">Rondônia</option> <option value="RR">Roraima</option> <option value="SC">Santa Catarina</option>
+                    <option value="SP">São Paulo</option> <option value="SE">Sergipe</option> <option value="TO">Tocantins</option>
                 </select>
                 <select id="select-cidade" onchange="carregarEscolas()">
-                    <option value="">Cidade...</option>
+                    <option value="">Selecione a Cidade...</option>
                 </select>
                 <select id="select-escola">
-                    <option value="">Unidade Escola/CMEI...</option>
+                    <option value="">Selecione a Unidade Escola/CMEI...</option>
                 </select>
                 <button class="btn-main" onclick="entrarNaEscola()">Acessar Painel</button>
             </div>
@@ -44,7 +52,7 @@
 
         <div class="avatar-container">
             <div id="avatar-display" class="avatar-emoji">🙋‍♂️</div>
-            <div id="balao-texto" class="speech-bubble">Olá! Toque em um botão.</div>
+            <div id="balao-texto" class="speech-bubble">Olá! Vamos conversar?</div>
         </div>
 
         <main id="icons-container"></main>
@@ -64,10 +72,9 @@
     <div id="custom-modal" class="modal">
         <div class="modal-content" style="max-width: 500px;">
             <h3>Personalizar Botão</h3>
-            
             <div class="tabs">
                 <button onclick="mudarAba('emoji')">Emojis</button>
-                <button onclick="mudarAba('internet')">Buscar Foto</button>
+                <button onclick="mudarAba('internet')">Internet / URL</button>
             </div>
 
             <div id="aba-emoji" class="aba-content">
@@ -75,6 +82,8 @@
             </div>
 
             <div id="aba-internet" class="aba-content" style="display:none;">
+                <input type="text" id="custom-url" placeholder="Cole a URL da imagem aqui..." style="margin-bottom: 10px;">
+                <p style="font-size: 11px; margin-bottom: 5px;">Ou pesquise uma imagem:</p>
                 <div class="search-box-img">
                     <input type="text" id="img-search-query" placeholder="Ex: Maçã, Cachorro...">
                     <button type="button" onclick="buscarImagensReais()">🔍</button>
@@ -85,7 +94,7 @@
             <input type="hidden" id="custom-icon">
             <input type="hidden" id="is-image-type" value="false">
             <input type="text" id="custom-text" placeholder="Nome do Botão">
-            <input type="text" id="custom-speak" placeholder="O que será falado?">
+            <input type="text" id="custom-speak" placeholder="Frase de voz">
             
             <button class="btn-main" onclick="salvarNovoCard()">Criar Botão</button>
             <button onclick="fecharModal()" class="btn-exit" style="width:100%; margin-top:5px;">Cancelar</button>
