--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Help TDL | Painel Ultra Completo</title>
+    <title>Help TDL | Painel Inteligente</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
 </head>
@@ -18,25 +18,25 @@
             <div class="badge">Painel do Professor</div>
             <h2>Configurar Unidade</h2>
             <div class="selectors">
-                <select id="select-estado" onchange="carregarCidades()">
-                    <option value="">Selecione o Estado...</option>
-                    <option value="AC">Acre</option> <option value="AL">Alagoas</option> <option value="AP">Amapá</option>
-                    <option value="AM">Amazonas</option> <option value="BA">Bahia</option> <option value="CE">Ceará</option>
-                    <option value="DF">Distrito Federal</option> <option value="ES">Espírito Santo</option> <option value="GO">Goiás</option>
-                    <option value="MA">Maranhão</option> <option value="MT">Mato Grosso</option> <option value="MS">Mato Grosso do Sul</option>
-                    <option value="MG">Minas Gerais</option> <option value="PA">Pará</option> <option value="PB">Paraíba</option>
-                    <option value="PR">Paraná</option> <option value="PE">Pernambuco</option> <option value="PI">Piauí</option>
-                    <option value="RJ">Rio de Janeiro</option> <option value="RN">Rio Grande do Norte</option> <option value="RS">Rio Grande do Sul</option>
-                    <option value="RO">Rondônia</option> <option value="RR">Roraima</option> <option value="SC">Santa Catarina</option>
-                    <option value="SP">São Paulo</option> <option value="SE">Sergipe</option> <option value="TO">Tocantins</option>
-                </select>
-                <select id="select-cidade" onchange="carregarEscolas()">
-                    <option value="">Selecione a Cidade...</option>
-                </select>
-                <select id="select-escola">
+                <input list="lista-estados" id="input-estado" placeholder="Digite o Estado (ex: PR)" oninput="verificarEstado()">
+                <datalist id="lista-estados">
+                    <option value="Acre"> <option value="Alagoas"> <option value="Amapá"> <option value="Amazonas">
+                    <option value="Bahia"> <option value="Ceará"> <option value="Distrito Federal"> <option value="Espírito Santo">
+                    <option value="Goiás"> <option value="Maranhão"> <option value="Mato Grosso"> <option value="Mato Grosso do Sul">
+                    <option value="Minas Gerais"> <option value="Pará"> <option value="Paraíba"> <option value="Paraná">
+                    <option value="Pernambuco"> <option value="Piauí"> <option value="Rio de Janeiro"> <option value="Rio Grande do Norte">
+                    <option value="Rio Grande do Sul"> <option value="Rondônia"> <option value="Roraima"> <option value="Santa Catarina">
+                    <option value="São Paulo"> <option value="Sergipe"> <option value="Tocantins">
+                </datalist>
+
+                <input list="lista-cidades" id="input-cidade" placeholder="Digite a Cidade..." oninput="verificarCidade()" disabled>
+                <datalist id="lista-cidades"></datalist>
+
+                <select id="select-escola" disabled>
                     <option value="">Selecione a Unidade Escola/CMEI...</option>
                 </select>
-                <button class="btn-main" onclick="entrarNaEscola()">Acessar Painel</button>
+
+                <button class="btn-main" id="btn-acessar" onclick="entrarNaEscola()" disabled>Acessar Painel</button>
             </div>
         </div>
     </section>
@@ -64,7 +64,7 @@
             <form id="login-form">
                 <input type="text" id="login-cpf" placeholder="CPF" value="07356531941">
                 <input type="password" id="login-senha" placeholder="Senha" value="help123">
-                <button type="submit" class="btn-main">Entrar</button>
+                <button type="submit" class="btn-main">Entrar no Sistema</button>
             </form>
         </div>
     </div>
@@ -76,26 +76,21 @@
                 <button onclick="mudarAba('emoji')">Emojis</button>
                 <button onclick="mudarAba('internet')">Internet / URL</button>
             </div>
-
             <div id="aba-emoji" class="aba-content">
                 <div id="biblioteca-emojis" class="emoji-grid"></div>
             </div>
-
             <div id="aba-internet" class="aba-content" style="display:none;">
-                <input type="text" id="custom-url" placeholder="Cole a URL da imagem aqui..." style="margin-bottom: 10px;">
-                <p style="font-size: 11px; margin-bottom: 5px;">Ou pesquise uma imagem:</p>
+                <input type="text" id="custom-url" placeholder="Cole a URL da imagem aqui...">
                 <div class="search-box-img">
-                    <input type="text" id="img-search-query" placeholder="Ex: Maçã, Cachorro...">
+                    <input type="text" id="img-search-query" placeholder="Ou pesquise: Maçã, Cachorro...">
                     <button type="button" onclick="buscarImagensReais()">🔍</button>
                 </div>
                 <div id="resultado-busca-img" class="emoji-grid"></div>
             </div>
-
             <input type="hidden" id="custom-icon">
             <input type="hidden" id="is-image-type" value="false">
             <input type="text" id="custom-text" placeholder="Nome do Botão">
             <input type="text" id="custom-speak" placeholder="Frase de voz">
-            
             <button class="btn-main" onclick="salvarNovoCard()">Criar Botão</button>
             <button onclick="fecharModal()" class="btn-exit" style="width:100%; margin-top:5px;">Cancelar</button>
         </div>
